Revision history for Config::Abstraction - Configuration Abstraction Layer

0.29
	Also look in ${script_name}.cfg

0.28	Sat May 24 09:00:10 EDT 2025
	Look in the current directory, unless given an absolute path

0.27	Fri May 23 17:04:52 EDT 2025
	Look in generic DOCUMENT_ROOT/../conf before site specific DOCUMENT_ROOT/conf
	Added the level argument to new()
	Look in the current directory

0.26	Fri May 16 21:10:49 EDT 2025
	Change location of bug reports to RT
	Bumped minimum version of XML::PP (GitHub#1 - ANDK)
	Turn off clone behavior

0.25	Thu May 15 07:57:07 EDT 2025
	Added the 'merge' option
	Improved the documentation of the merge_defaults routine

0.24	Mon May 12 16:15:09 EDT 2025
	Added the 'no_fixate' option

0.23	Mon May 12 12:01:49 EDT 2025
	Fix tests on machines that have configuration files installed elsewhere
	Look in more places for the config files, when config_dirs is not given
	Consider $script_name for configuration data as well
	'file' means 'config_file'

0.22	Fri May  9 14:31:28 EDT 2025
	Fix CI tests

0.21	Fri May  9 13:55:23 EDT 2025
	Handle YAML crashes on reading an INI file

0.20	Tue May  6 20:07:40 EDT 2025
	Added merge_defaults()

0.19	Tue May  6 13:48:46 EDT 2025
	Make the data passed to the contructor be the default values

0.18	Tue May  6 08:17:31 EDT 2025
	Use the file config_dirs/default as the base
	Honour CONFIG_DIR

0.17	Mon May  5 07:45:21 EDT 2025
	Try harder to find the files

0.16	Thu May  1 07:25:25 EDT 2025
	Handle mixed case environments a bit better

0.15	Tue Apr 29 20:24:10 EDT 2025
	Makefile.PL: Prefer XML::PP, since XML::Simple can have loading problems on Windows
	Improved the fallback to Config::Auto when XML::Simple isn't working
	new() now fails, silently, if there's no config file
	Use Config::Abstract to load .pl files, but note RT#164587

0.14	Mon Apr 28 11:17:20 EDT 2025
	Allow logger to be an array ref
	Fail more gracefully
	Fall back to XML::PP if XML::Simple can't be loaded
	Config_path is now a list
